Bug fixes: Removes JS dependency on intro panel CTA, wordpress codex alignment classes

--- a/sass/modules/_modules.scss
+++ b/sass/modules/_modules.scss
@@ -104,6 +104,12 @@
       }
    }
    &.wysiwyg{
+      img.alignright { float: right; margin: 0 0 1rem 1rem; }
+      img.alignleft { float: left; margin: 0 1rem 1rem 0; }
+      img.aligncenter { display: block; margin-left: auto; margin-right: auto; }
+      .alignright { float: right; }
+      .alignleft { float: left; }
+      .aligncenter { display: block; margin-left: auto; margin-right: auto; }
       h1,h2,h3,h4,h5,h6{
          margin-bottom: 1rem;
          a{
